Uvodno predavanja: prisutnost i učionica
Promijenila se učionica pa sam to ispravio i maknuo liniju gdje
provjeravamo prisutnost. Dovoljno je doći na labose i to je imperativ.
Previše je ljudi da bismo ih tjerali na predavanja...

Signed-off-by: Darko Janekovic <darko.janekovic@gmail.com>

--- a/1718/lectures/00_opis_vjestine/00_opis_vjestine.tex
+++ b/1718/lectures/00_opis_vjestine/00_opis_vjestine.tex
@@ -29,7 +29,7 @@
 \author[Leonard Volarić Horvat]{Leonard Volarić Horvat\\{\small Nositelj: dr. sc. Stjepan Groš}}
 \institute[FER]{Sveučilište u Zagrebu \\
 				Fakultet elektrotehnike i računarstva}
-				
+
 \date{\todayiso}
 
 \begin{document}
@@ -91,7 +91,7 @@
 	\item Svake subote osim vikendima prije ispitnih tjedana
 	\item 8 termina
 	\item 4 grupe
-	\item Paralelna predavanja u dvoranama A111 i D346
+	\item Paralelna predavanja u dvoranama D272 i D346
 	\item Termini:
 	\begin{itemize}
 		\item 10-12 sati
@@ -110,13 +110,11 @@
 	\begin{itemize}
 		\item 5 domaćih zadaća x 8 bodova = 40 bodova
 		\item 3 laboratorijske vježbe x 20 bodova = 60 bodova
-		\item Prisutnost na predavanjima x 0 bodova = 0 bodova
 	\end{itemize}
 	\item Uvjeti za prolaz vještine:
 	\begin{itemize}
 		\item Ukupno minimalno 20 bodova na domaćim zadaćama
 		\item Minimalno 10 bodova na \textbf{svakoj} laboratorijskoj vježbi
-		\item Prisutnost na 50\% predavanja
 		\item Sve skupa \textbf{\textgreater 50} bodova (što proizlazi iz zadovoljavanja prethodnih uvjeta)
 	\end{itemize}
 \end{itemize}
@@ -164,7 +162,7 @@
 	\begin{itemize}
 		\item Knjige, članci, druga predavanja, stripovi, \ldots :)
 		\item Internet (najbolji izvor)
-		\item wiki, irc, forumi, google 
+		\item wiki, irc, forumi, google
 	\end{itemize}
 \end{itemize}
 \end{frame}
