Minor correction: ls -h != ls --help, so substituted with recursive option instad

--- a/1718/lectures/01_uvod/01_uvodno_predavanje.tex
+++ b/1718/lectures/01_uvod/01_uvodno_predavanje.tex
@@ -385,8 +385,8 @@
   \end{itemize}
   \item Naredbe obično imaju različite opcije za isto ponašanje
   \begin{itemize}
-    \item Primjer: \texttt{ls --help} \textbf{ili}
-          \texttt{ls -h}
+    \item Primjer: \texttt{ls --recursive} \textbf{ili}
+          \texttt{ls -R}
   \end{itemize}
   \item Duge opcije su često opisne zbog lakšeg razumijevanja
 \end{itemize}
