Minor typo corrections

--- a/1718/lectures/02_datoteke_direktoriji/zzv_2.tex
+++ b/1718/lectures/02_datoteke_direktoriji/zzv_2.tex
@@ -78,13 +78,13 @@
 	\item Treći zadatak:
 	\begin{itemize}
 		\item Napravite direktorij \shell{Jules}
-		\item U njemu stvorite direktorije \shell{Rita}, \shell{Lucy}, \shell{Elenor}, \shell{Desmond}
+		\item U njemu stvorite direktorije \shell{Rita}, \shell{Lucy}, \shell{Eleanor}, \shell{Desmond}
 		\item Kopirajte direktorij \shell{Rita} u \shell{Lucy}
 		\item U direktoriju \shell{Desmond} stvorite prazne datoteke \shell{Molly} i \shell{Bill}
-		\item U direktoriju \shell{Elenor} napravite simboličku poveznicu na direktorij \shell{Lucy} 
+		\item U direktoriju \shell{Eleanor} napravite simboličku poveznicu na direktorij \shell{Lucy} 
 		\item Izbrišite direktorij \shell{Lucy}
-		\item Provjerite sadržaj direktorija \shell{Elenor}
-		\item Ispišite zadnje vrijeme promjene direktorija \shell{Elenor}
+		\item Provjerite sadržaj direktorija \shell{Eleanor}
+		\item Ispišite zadnje vrijeme promjene direktorija \shell{Eleanor}
 	\end{itemize}
 \end{itemize}
 \end{frame}
